Version 2.4.7
--------------------------------------------------------------------
10 December 2007
+ Dropped GLOBAL authorization from canChangePassword since it isn't
  in the system yet.

Version 2.4.6
--------------------------------------------------------------------
26 November 2007
+ Added error check to permission menu.

12 November 2007
+ Error for missing user groups now reports user id.

9 November 2007
+ Forgot password will work if CAPTCHA is disabled.
+ Updated: templates/forms/forgot.tpl

29 October 2007
+ Using new savePermissions function instead of save.

17 October 2007
+ Current_User was calling giveItemPermissions incorrectly.

Version 2.4.5
--------------------------------------------------------------------
3 October 2007
+ RFE #1757530 added - admin can set reserved user name list.
+ Added search to groups listing.
+ Added missing pager navigation to groups listing.
+ Updated: templates/manager/groups.tpl

27 September 2007
+ Added missing ability to activate and deactivate users.
+ Added error page should deactivated user attempt to log in.
+ Added link to settings page that re-registers module permissions.
+ Moved Activate and Deactivate commands to the Active Yes/No column.
+ Deities cannot be deactivated.
+ Fixed Vietnamese language abbreviation.
+ Updated: conf/error.php, conf/languages.php,
  templates/forms/settings.tpl 

Version 2.4.4
--------------------------------------------------------------------
24 September 2007
+ Added check all buttons to permissions form.
+ Changed bad key error in the popup permission menu.
+ Updated: conf/error.php, templates/forms/permissions.tpl
+ Copy directory: javascript/check_all/

21 September 2007
+ Removed the line item formatting for the permission radio buttons.
+ Updated: templates/forms/permission_pop.tpl

20 September 2007
+ Session timeout on permission popup refreshes parent to login
  screen. 

19 September 2007
+ Increase popup permission height.