@@ -1,0 +1,14 @@
+<table cellpadding="4">
+<tr><th>{BANNED_IP_SORT} {BANNED_IP_LABEL}</th><th>&nbsp;</th></tr>
+<!-- BEGIN listrows -->
+<tr><td>{BANNED_IP}</td><td>{ACTION}</td>
+</td></tr>
+<!-- END listrows -->
+</table>
+{EMPTY_MESSAGE}
+<p>{SEARCH}</p>
+<div align="center">
+  <b>{PAGE_LABEL}</b><br />
+  {PAGES}<br />
+  {LIMITS}
+</div>
