@@ -1,3 +1,8 @@
+14 December 2007
++ New functions in Users and Current_User to ban and unban users
++ New panel tab and form for unbanning users.
++ Updated: templates/forms/banned_users.tpl
+
 Version 2.4.7
 --------------------------------------------------------------------
 10 December 2007
